@@ -21,8 +21,6 @@ var results = new Object;
 
 var i = 0;
 
-var timeout = null;
-
 testEncode("UTF-8", "U+00A0", "%C2%A0");
 //Yen symbol in gbk
 testEncode('GBK', 'U+00A5', '%A3%A4');
